# pai-agent-sdk

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SKILL.md  codecov.yaml  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: cli-tests.yml  main.yml  on-release-main.yml
docs/: README.md  context.md  environment.md  events.md  logging.md  media.md  message-bus.md  model.md  resumable-resources.md  skills.md  streaming.md  subagent.md  toolset.md
examples/: general.py
pai_agent_sdk/: __init__.py  _config.py  _logger.py  bus.py  context.py  events.py  mcp.py  media.py  presets.py  usage.py  utils.py
pai_agent_sdk/agents/: compact.py  guards.py  image_understanding.py  main.py  video_understanding.py
pai_agent_sdk/agents/models/: __init__.py  gateway.py  utils.py
pai_agent_sdk/agents/prompts/: compact.md  image_understanding.md  video_understanding.md
pai_agent_sdk/context/: __init__.py  agent.py  bus.py  tasks.py
pai_agent_sdk/environment/: __init__.py  base.py  docker.py  local.py
pai_agent_sdk/filters/: __init__.py  auto_load_files.py  bus_message.py  environment_instructions.py  handoff.py  image.py  media_upload.py  model_swtich.py  runtime_instructions.py  tool_args.py
pai_agent_sdk/sandbox/browser/: docker_.py
pai_agent_sdk/skills/building-agent/: SKILL.md
pai_agent_sdk/subagents/: __init__.py  config.py  factory.py  presets.py
pai_agent_sdk/subagents/presets/: code-reviewer.md  debugger.md  executor.md  explorer.md  searcher.md
pai_agent_sdk/toolsets/: __init__.py  base.py
pai_agent_sdk/toolsets/browser_use/: _config.py  _tools.py  toolset.py
pai_agent_sdk/toolsets/browser_use/tools/: dialog.py  form.py  interaction.py  navigation.py  query.py  state.py  validation.py  wait.py
pai_agent_sdk/toolsets/context/: __init__.py  handoff.py
pai_agent_sdk/toolsets/context/prompts/: handoff.md
pai_agent_sdk/toolsets/core/: base.py
pai_agent_sdk/toolsets/core/content/: load.py  load_media_url.py
pai_agent_sdk/toolsets/core/context/: handoff.py
pai_agent_sdk/toolsets/core/document/: __init__.py  office.py  pdf.py
pai_agent_sdk/toolsets/core/enhance/: __init__.py  task.py  todo.py
pai_agent_sdk/toolsets/core/filesystem/: _gitignore.py  _types.py  glob.py  grep.py  view.py
pai_agent_sdk/toolsets/core/multimodal/: __init__.py  image.py  video.py
pai_agent_sdk/toolsets/core/shell/: shell.py
pai_agent_sdk/toolsets/core/subagent/: __init__.py  factory.py  tools.py  unified.py
pai_agent_sdk/toolsets/core/web/: scrape.py  search.py
pai_agent_sdk/toolsets/enhance/: __init__.py  thinking.py  todo.py
pai_agent_sdk/toolsets/skills/: __init__.py  config.py  toolset.py
paintress_cli/: LICENSE  README.md  pyproject.toml
paintress_cli/paintress_cli/: __init__.py  __main__.py  app.py  browser.py  cli.py  config.py  display.py  environment.py  events.py  hooks.py  logging.py  mcp.py  processes.py  runtime.py  session.py  steering.py  usage.py
paintress_cli/paintress_cli/app/: __init__.py  commands.py  state.py  tui.py
paintress_cli/paintress_cli/hitl/: __init__.py  approval.py  ui.py
paintress_cli/paintress_cli/renderers/: __init__.py  agent_panel.py  output_pane.py  status_bar.py  tool_display.py
paintress_cli/paintress_cli/rendering/: __init__.py  event_renderer.py  renderer.py  tool_message.py  tracker.py  types.py
paintress_cli/paintress_cli/rendering/tool_panels/: __init__.py  base.py  edit_panel.py  task_panel.py  thinking_panel.py  todo_panel.py
paintress_cli/paintress_cli/skills/: __init__.py
paintress_cli/paintress_cli/skills/cli-config/: SKILL.md
paintress_cli/paintress_cli/skills/cli-config/references/: presets.md
paintress_cli/paintress_cli/skills/subagent-config/: SKILL.md
paintress_cli/paintress_cli/streaming/: __init__.py  event_handler.py  subagent_tracker.py  text_streamer.py
paintress_cli/paintress_cli/templates/: config.toml  env.example  system_prompt.md  tools.toml
paintress_cli/paintress_cli/toolsets/: __init__.py  process.py
paintress_cli/spec/: 00-overview.md  01-event-system.md  02-configuration.md  03-tui-environment.md  04-steering.md  05-browser-integration.md  06-ui-layout.md  07-logging.md  08-hitl.md
paintress_cli/tests/: conftest.py  test_app_integration.py  test_browser.py  test_commands.py  test_config.py  test_display.py  test_environment.py  test_events_hooks.py  test_hitl.py  test_logging.py  test_mcp.py  test_processes.py  test_runtime.py  test_state.py  test_steering.py  test_streaming.py  test_toolsets.py  test_usage.py
scripts/: sync-skills.sh
skills/: SKILL.md
tests/: test_bus.py  test_config.py  test_context.py  test_events.py  test_foo.py  test_mcp.py  test_media.py  test_model_wrapper.py  test_presets.py  test_task_manager.py  test_utils.py
tests/agents/: __init__.py  test_guards.py
tests/environment/: test_resumable_resources.py
tests/filters/: test_auto_load_files.py  test_bus_message.py  test_environment_instructions.py  test_handoff.py  test_image.py  test_media_upload.py  test_model_switch.py  test_tool_args.py
tests/subagents/: __init__.py  conftest.py  test_config.py  test_factory.py  test_init.py  test_presets.py  test_unified.py
tests/toolsets/: conftest.py  test_base.py  test_instruction.py
tests/toolsets/browser_use/: test_browser_use_config.py  test_browser_use_wait.py
tests/toolsets/core/: test_base.py
tests/toolsets/core/content/: test_url_helper.py
tests/toolsets/core/context/: test_handoff.py
tests/toolsets/core/document/: __init__.py  dummy.docx  dummy.pptx  dummy.xlsx  test_document.py
tests/toolsets/core/enhance/: test_thinking.py  test_todo.py
tests/toolsets/core/filesystem/: test_edit.py  test_gitignore.py  test_glob.py  test_grep.py  test_ls.py  test_mkdir.py  test_move_copy.py  test_replace.py  test_view.py
tests/toolsets/core/shell/: test_shell.py
tests/toolsets/enhance/: __init__.py  test_thinking.py  test_todo.py
tests/toolsets/skills/: __init__.py  test_config.py  test_toolset.py
(+18 files in other folders)
