[project]
name = "pai-agent-sdk"
version = "0.0.1"
description = "Toolsets and context management for building agents with Pydantic AI."
authors = [{ name = "Wh1isper", email = "jizhongsheng957@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.11,<3.14"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anyio>=4.12.0",
    "cdp-use>=1.4.4, < 2.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.0.0",
    "pathspec>=0.12.0",
    "pillow>=10.0.0",
    "pydantic>=2.12.5",
    "pydantic-ai-slim>=1.39.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=9.0.0",
    "typing-extensions>=4.15.0",
]

[project.urls]
Homepage = "https://wh1isper.github.io/pai-agent-sdk/"
Repository = "https://github.com/wh1isper/pai-agent-sdk"
Documentation = "https://wh1isper.github.io/pai-agent-sdk/"

[project.optional-dependencies]
docker = ["docker>=7.0.0"]
web = [
    "tavily-python>=0.7.0",
    "firecrawl-py>=4.0.0",
    "markitdown[all]>=0.1.2",
]
document = [
    "pymupdf>=1.26.0",
    "pymupdf4llm>=0.2.0",
    "markitdown[all]>=0.1.2",
]
all = [
    "pai-agent-sdk[docker,web,document]",
]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "pytest-asyncio>=0.25.3",
    "pytest-xdist>=3.0.0",

    "deptry>=0.22.0",
    "pyright>=1.1.390",
    "pytest-cov>=4.0.0",
    "ruff>=0.9.2",
    "inline-snapshot>=0.20.0",
    "pytest-httpx>=0.35.0",

    # Optional dependencies included in dev
    "docker>=7.0.0",
    "tavily-python>=0.7.0",
    "firecrawl-py>=4.0.0",
    "markitdown[all]>=0.1.2",
    "pymupdf>=1.25.0",
    "pymupdf4llm>=0.0.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
py-modules = ["pai_agent_sdk"]

[tool.pyright]
include = ["pai_agent_sdk"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportTypedDictNotRequiredAccess = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Avoid specifying long messages outside exception class (impractical for simple exceptions)
    "TRY003",
    # Consider moving return to else block (style preference, not a bug)
    "TRY300",
    # Abstract raise to inner function (too strict, especially for tests)
    "TRY301",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "SIM117", "RUF059", "TRY400", "B904"]

[tool.ruff.format]
preview = true

[tool.deptry]
# anthropic is a transitive dependency from pydantic-ai-slim
# pai-agent-sdk is self-reference in optional dependencies
ignore = ["DEP001", "DEP002"]
per_rule_ignores = { DEP001 = ["anthropic"], DEP002 = ["pai-agent-sdk"] }

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["pai_agent_sdk"]
omit = [
    # Agents require AI API integration tests, not suitable for unit tests
    "pai_agent_sdk/agents/*",
    # Re-export only __init__.py files
    "pai_agent_sdk/toolsets/core/*/__init__.py",
]
