[project]
name = "pai-agent-sdk"
dynamic = ["version"]
description = "Application framework for building AI agents with Pydantic AI - environment abstractions, session management, and hierarchical agent patterns"
authors = [{ name = "youware", email = "lab@youware.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.11,<3.14"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


dependencies = [
    "agent-environment==0.4.0",
    "anyio>=4.12.0",
    "cdp-use>=1.4.4,<2.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.0.0",
    "pathspec>=0.12.0",
    "pillow>=10.0.0",
    "pydantic>=2.12.5",
    "pydantic-ai-slim>=1.42.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "tenacity>=9.0.0",
    "typing-extensions>=4.15.0",
]

[project.urls]
Repository = "https://github.com/youware-labs/pai-agent-sdk"

[project.optional-dependencies]
examples = ["pydantic-ai",
    "python-dotenv"]
docker = ["docker>=7.0.0"]
web = ["tavily-python>=0.7.0", "firecrawl-py>=4.0.0", "markitdown[all]>=0.1.2"]
document = ["pymupdf>=1.26.6", "pymupdf4llm>=0.2.8", "markitdown[all]>=0.1.2", "pymupdf-layout>=1.26.6"]
all = ["pai-agent-sdk[docker,web,document,examples]"]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "pytest-asyncio>=0.25.3",
    "pytest-xdist>=3.0.0",
    "deptry>=0.22.0",
    "pyright>=1.1.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.9.2",
    "inline-snapshot>=0.20.0",
    "pytest-httpx>=0.35.0",
    # Optional dependencies included in dev
    "docker>=7.0.0",
    "tavily-python>=0.7.0",
    "firecrawl-py>=4.0.0",
    "markitdown[all]>=0.1.2",
    "pymupdf>=1.26.6",
    "pymupdf4llm>=0.2.8",
    "pymupdf-layout>=1.26.6",
    # For examples
    "pydantic-ai",
    "python-dotenv",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.hatch.build.targets.wheel]
packages = ["pai_agent_sdk"]

# uv workspace configuration
[tool.uv.workspace]
members = ["paintress_cli"]

[tool.uv.sources]
pai-agent-sdk = { workspace = true }

[tool.pyright]
include = ["pai_agent_sdk", "paintress_cli"]
exclude = ["paintress_cli/paintress_cli/skills", "paintress_cli/tests", "tests", "examples", "skills/examples"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportTypedDictNotRequiredAccess = false


[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Avoid specifying long messages outside exception class (impractical for simple exceptions)
    "TRY003",
    # Consider moving return to else block (style preference, not a bug)
    "TRY300",
    # Abstract raise to inner function (too strict, especially for tests)
    "TRY301",
]

[tool.ruff.lint.per-file-ignores]
"paintress_cli/paintress_cli/*" = ["C901", "SIM108"]
"paintress_cli/tests/*" = ["S101", "SIM117", "RUF059", "TRY400", "B904"]
"tests/*" = ["S101", "SIM117", "RUF059", "TRY400", "B904"]
"skills/examples/*" = ["S101", "SIM117", "RUF059", "TRY400", "B904", "E402"]
"examples/*" = ["S101", "SIM117", "RUF059", "TRY400", "B904", "E402"]


[tool.ruff.format]
preview = true

[tool.deptry]
# anthropic is a transitive dependency from pydantic-ai-slim
# pai-agent-sdk is self-reference in optional dependencies
ignore = ["DEP001", "DEP002"]
per_rule_ignores = { DEP001 = ["anthropic"], DEP002 = ["pai-agent-sdk"], DEP003 = ["anthropic", "paintress_cli"], DEP004 = ["pytest"]}

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["pai_agent_sdk"]
omit = [
    # Agents require AI API integration tests, not suitable for unit tests
    "pai_agent_sdk/agents/*",
    "pai_agent_sdk/toolsets/core/multimodal/*",
    # Re-export only __init__.py files
    "pai_agent_sdk/toolsets/core/*/__init__.py",
]
